2004-04-22 1.2.16 Jeekay
* Handle bans of hidden hosts properly
* Bumped version to 1.2.16

2004-01-25 1.2.15 Jeekay
* Removed OutputFlood code as it only ever affected bots
* Bumped version to 1.2.15

2003-11-28 1.2.14 Jeekay
* Prevent channels with COMMENT or LOCKED from being purged
* Bumped version to 1.2.14

2003-11-08 1.2.13 Jeekay
* Fixed spurious RECOVER messages
* Fixed core when a user was serveropped and globally suspended
* Changed all references from `memo' to `note'
* Bumped version to 1.2.13

2003-10-10 1.2.12 Jeekay
* Removed LISTEN events
* Respect sql_pass if given
* Added INVISIBLE to list of flags shown for users
* Added IDLE flag for channels that have been autoparted
* Check we are opped before issuing modes
* If we join a channel, set AUTOJOIN
* Added support for cmode +T
* Added UPDATEIDLE to part channels with noone else in
* Bumped version to 1.2.12

2003-10-02 1.2.11 Jeekay
* Fixed USERFLAGS error message.
* Bumped version to 1.2.11

2003-05-29 1.2.10 Jeekay
* Fixed code to allow ADDUSER to continue after an adding failure
* Inform the user when MAXLOGINS is causing auth to fail
* Bumped version to 1.2.10

2003-04-20 1.2.09 Jeekay
* Added ability to have dynamic runtime configuration
* Moved MOTD config from static code to database
* Bumped version to 1.2.09

2003-04-10 1.2.08 Jeekay
* Fixed silly logging of non-admins logging out.
* Bumped version to 1.2.08

2003-03-29 1.2.07 Jeekay
* Added logging of admin login/logouts and login failures
* Fixed inconsistancy for level 1 in ADMINCMDS
* We now deop/devoice as appropriate if a user is MODINFO'd or REMUSER'd in a
  channel that has STRICTOP or STRICTVOICE set.
* Added full support for the newer channel modes (+CcSr)
* Removed RANDOM
* Bumped version to 1.2.07

2003-02-21 1.2.06 Jeekay
* Fixed silly STRICTVOICE bug that'd deop on <=voice instead of <voice
* Bumped version to 1.2.06

2003-02-05 1.2.05 Jeekay
* BAN now devoices clients if a ban level 25-74 is set