@@ -1,3 +1,11 @@
+2004-04-22 1.2.16 Jeekay
+**
+UPDATE users SET flags = flags | 128 WHERE id IN
+	( SELECT DISTINCT user_id FROM note_allow);
+**
+SELECT (flags & 128) AS flag, COUNT(*) FROM users GROUP BY flag;
+**
+
 2003-11-04 1.2.12
 **
 INSERT INTO commands VALUES ('UPDATEIDLE', 'ADMIN', 950, 0, '', '',
